infrastructure/dev/patches/keycloak.yaml
#
# This source file is part of the Stanford Spezi open source project
#
# SPDX-FileCopyrightText: 2026 Stanford University and the project authors (see CONTRIBUTORS.md)
#
# SPDX-License-Identifier: MIT
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: app-name-placeholder
spec:
  replicas: 1
  template:
    spec:
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
      containers:
        - name: keycloak
