infrastructure/dev/patches/main-ingress.yaml
#
# This source file is part of the Stanford Spezi open source project
#
# SPDX-FileCopyrightText: 2026 Stanford University and the project authors (see CONTRIBUTORS.md)
#
# SPDX-License-Identifier: MIT
#

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: app-name-placeholder-ingress
  namespace: app-name-placeholder
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  routes:
    - kind: Rule
      match: Host(`localhost`)
      priority: 1
      services:
        - name: app-name-placeholder-web-service
          port: 80
      middlewares:
        - name: security-headers
    - kind: Rule
      match: Host(`localhost`) && PathPrefix(`/api`)
      priority: 2
      services:
        - name: app-name-placeholder-server-service
          port: 8080
      middlewares:
        - name: security-headers
